# oura-streaming

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  NextSteps.md  PRD.md  README.md  app.yml  index.html  orval.config.ts  package.json  pyproject.toml  tsconfig.json  tsr.config.json  vite.config.ts
bundle/: databricks.yml
bundle/resources/: catalog.yml  schema.yml  table_setup_job.yml
plans/: evolution_plan.md
src/oura_streaming/: __init__.py  _metadata.py  config.py  main.py
src/oura_streaming/api/: __init__.py
src/oura_streaming/api/routes/: __init__.py  auth.py  dashboard.py  health.py  subscriptions.py  webhooks.py
src/oura_streaming/core/: __init__.py  database.py  security.py
src/oura_streaming/models/: __init__.py  auth.py  data_types.py  db.py  responses.py  webhook.py
src/oura_streaming/services/: __init__.py  dbsql_client.py  event_store.py  oura_client.py  poller.py  warehouse_store.py  zerobus_sink.py
src/oura_streaming/templates/: dashboard.html
src/oura_streaming/ui/: app.css  main.tsx
src/oura_streaming/ui/components/apx/: events-table.tsx  metric-chart.tsx  status-indicator.tsx
src/oura_streaming/ui/components/ui/: badge.tsx  button.tsx  card.tsx  separator.tsx  table.tsx
src/oura_streaming/ui/hooks/: use-websocket.ts
src/oura_streaming/ui/lib/: api.ts  fetcher.ts  selector.ts
src/oura_streaming/ui/routes/: _sidebar.tsx
src/oura_streaming/ui/routes/_sidebar/: -layout.tsx  dashboard.tsx  events.tsx  settings.tsx
tests/: __init__.py  conftest.py  test_poller.py  test_webhooks.py
