[project]
name = "oura-streaming"
version = "0.1.0"
description = "Oura Ring API v2 webhook receiver with OAuth2 integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.46",
    "aiosqlite>=0.22.1",
    "jinja2>=3.1.6",
    "greenlet>=3.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oura_streaming"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
